<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/titulo_memoriaInterna">

        <EditTextPreference
            android:defaultValue="false"
            android:key="NombreMemoriaInterna"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/summary"
            android:title="@string/title_editText" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/title_memoria_externa">

        <EditTextPreference
            android:defaultValue="false"
            android:key="rutaMemoriaExterna"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/summary_ruta_sdcard"
            android:title="@string/title_edittext_sdcard" />
        <EditTextPreference
            android:defaultValue="false"
            android:key="NombreMemoriaExterna"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/summary_nombre"
            android:title="@string/title_editText" />

    </PreferenceCategory>


</PreferenceScreen>